refs #3 #6 - more WIP fixing compiler errors